--- a/k-calcom-deployment-with-alb.yaml
+++ b/k-calcom-deployment-with-alb.yaml
@@ -30,6 +30,37 @@ spec:
               memory: "2Gi"
               cpu: "1"
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: calapi
+  namespace: calcom
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: calapi
+  template:
+    metadata:
+      labels:
+        app: calapi
+    spec:
+      containers:
+        - name: calapi
+          image: 923889749700.dkr.ecr.us-east-2.amazonaws.com/calapi-v3.5.0:latest
+          ports:
+            - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: calcom-config
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "500m"
+            limits:
+              memory: "2Gi"
+              cpu: "1"
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -43,6 +74,20 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: calapi
+  namespace: calcom
+spec:
+  type: NodePort
+  selector:
+    app: calapi
+  ports:
+    - protocol: TCP
+      port: 81
+      targetPort: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -64,3 +109,10 @@ spec:
                 name: calcom
                 port:
                   number: 80
+          - path: /api/v1
+            pathType: Prefix
+            backend:
+              service:
+                name: calapi
+                port:
+                  number: 81
